Added JavaFX debug info